Configured conf.py to enable nbsphinx to run notebooks

--- a/docs/source/examples/initial_simulation.ipynb
+++ b/docs/source/examples/initial_simulation.ipynb
@@ -5,13 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HOM Simulation\n",
+    "# Circuit Building\n",
     "- This notebook contains some examples of using the circuit builder class as part of the emulator."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "|1,1>    0.5    0.5    0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +112,13 @@
    "source": [
     "results.display_as_dataframe(conv_to_probability = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
