Switch add_separation component to add_barrier. This is more consistent with its behaviour and also with similar functionality in other languages.

--- a/docs/source/examples/ralph_cnot.ipynb
+++ b/docs/source/examples/ralph_cnot.ipynb
@@ -53,7 +53,7 @@
     "    cnot_circuit.add_bs(m, loss = loss, reflectivity = 0.5)\n",
     "    cnot_circuit.add_ps(m+1, p)\n",
     "    if m in [3,4,3]:\n",
-    "        cnot_circuit.add_separation()"
+    "        cnot_circuit.add_barrier()"
    ]
   },
   {
