--- a/docs/source/examples/3_qubit_GHZ_generation.ipynb
+++ b/docs/source/examples/3_qubit_GHZ_generation.ipynb
@@ -254,8 +254,8 @@
     "\n",
     "# Define herald and get results\n",
     "herald = lambda s: (not s[0] and not s[3] and not s[4] and not s[9] \n",
-    "                    and s[1:3].num() == 1 and s[5:7].num() == 1\n",
-    "                    and s[7:9].num() == 1)\n",
+    "                    and sum(s[1:3]) == 1 and sum(s[5:7]) == 1\n",
+    "                    and sum(s[7:9]) == 1)\n",
     "results = sampler.sample_N_inputs(100000, herald = herald, seed = 1)\n",
     "# Process with function\n",
     "converted_results = process_cnot_data(results)"
@@ -329,8 +329,8 @@
    "source": [
     "# Define herald and get results\n",
     "herald = lambda s: (not s[0] and not s[3] and not s[4] and not s[9] \n",
-    "                    and s[1:3].num() == 1 and s[5:7].num() == 1\n",
-    "                    and s[7:9].num() == 1)\n",
+    "                    and sum(s[1:3]) == 1 and sum(s[5:7]) == 1\n",
+    "                    and sum(s[7:9]) == 1)\n",
     "results = sampler.sample_N_inputs(100000, herald = herald, seed = 1)\n",
     "# Process with function\n",
     "converted_results = process_cnot_data(results)"
