--- a/docs/source/examples/ralph_cnot.ipynb
+++ b/docs/source/examples/ralph_cnot.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ralph CNOT\n",
+    "# Ralph CNOT - All simulators\n",
     "- This notebook contains a recreation of the Ralph CNOT gate from https://arxiv.org/abs/quant-ph/0112088 and demonstrates the application of different simulation objects."
    ]
   },
@@ -53,7 +53,7 @@
     "    cnot_circuit.add_bs(m, loss = loss, reflectivity = 0.5)\n",
     "    cnot_circuit.add_ps(m+1, p)\n",
     "    if m in [3,4,3]:\n",
-    "        cnot_circuit.add_separation()"
+    "        cnot_circuit.add_barrier()"
    ]
   },
   {
