Added heralded CNOT example and corrected some errors in other notebooks.

--- a/docs/source/examples/multi_photon_sampling.ipynb
+++ b/docs/source/examples/multi_photon_sampling.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-photon sampling\n",
+    "# Multi-photon Sampling\n",
     "- The following notebook demonstrates the use of the emulator to sample from multi-photon inputs.\n",
     "- First import required modules and some additional tools."
    ]
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Create sampler, choosing a 3 photon state with photons on mode 0, 1 and 2."
+    "- Create Sampler, choosing a 3 photon state with photons on mode 0, 1 and 2."
    ]
   },
   {
