--- a/docs/source/examples/ralph_cnot.ipynb
+++ b/docs/source/examples/ralph_cnot.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ralph CNOT - All simulators\n",
+    "# Ralph CNOT - All Simulators\n",
     "- This notebook contains a recreation of the Ralph CNOT gate from https://arxiv.org/abs/quant-ph/0112088 and demonstrates the application of different simulation objects."
    ]
   },
