--- a/docs/source/examples/single_photon_demo.ipynb
+++ b/docs/source/examples/single_photon_demo.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Single-photon simulation\n",
+    "# Single-photon Simulation\n",
     "- The following notebook demonstrates the use of the emulator to simulate the propagation of a single photon in a quantum photonic processor.\n",
     "- This can be used to find the unitary implemented by a system.\n",
     "- First import required modules and some additional tools."
@@ -67,8 +67,8 @@
    "metadata": {},
    "source": [
     "## Simulator\n",
-    "- First we try using the simulation part of the emulator, this allows to simulate a number of input states and then find the probability amplitudes for a given number of outputs.\n",
-    "- To set this up, we specify the generated interferometer to the simulator class. "
+    "- First we try using the simulation part of the emulator. This allows the simulation of a number of input states, finding the probability amplitudes for the given outputs.\n",
+    "- To set this up, we specify the generated circuit to the simulator class. "
    ]
   },
   {
@@ -98,13 +98,13 @@
     "\n",
     "# Create all single photon states by adding 1 to list when i=j, otherwise add 0\n",
     "for i in range(N):\n",
-    "    sub_states = []\n",
+    "    state = []\n",
     "    for j in range(N):\n",
     "        if i == j:\n",
-    "            sub_states += [1]\n",
+    "            state += [1]\n",
     "        else:\n",
-    "            sub_states += [0]\n",
-    "    states.append(State(sub_states))\n",
+    "            state += [0]\n",
+    "    states.append(State(state))\n",
     "\n",
     "# Calculate probability amplitude\n",
     "results = sim.simulate(states, states)\n",
