--- a/docs/source/examples/bell_state_generator.ipynb
+++ b/docs/source/examples/bell_state_generator.ipynb
@@ -359,7 +359,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x20ea8354610>"
+       "<drawsvg.drawing.Drawing at 0x2a045031190>"
       ]
      },
      "metadata": {},
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Choose the sample_N_inputs function to test the expected output counts after 10,000 inputs into the system."
+    "- Choose the sample_N_inputs function to test the expected output counts after 100,000 inputs into the system."
    ]
   },
   {
@@ -441,7 +441,7 @@
    "source": [
     "N_rep = 100000\n",
     "\n",
-    "results = sampler.sample_N_inputs(N_rep, herald = herald_func, \n",
+    "results = sampler.sample_N_inputs(N_rep, post_select = herald_func, \n",
     "                                  min_detection = 4, seed = 10)\n",
     "states, counts = [], []\n",
     "for s, c in results.items():\n",
@@ -480,13 +480,6 @@
     "plt.xticks(range(len(states)), states)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
