Introduced tutorials section with more complete demonstrations - These notebooks still need to be populated with information.

--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Circuit Building\n",
-    "- This notebook contains some examples of using the circuit builder class as part of the emulator."
+    "- This tutorial demonstrates how circuits can be built up from the set of fundamental components included within Lightworks."
    ]
   },
   {
@@ -81,7 +81,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfc1a50>"
+       "<drawsvg.drawing.Drawing at 0x2b0db941950>"
       ]
      },
      "metadata": {},
@@ -173,7 +173,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4ce12590>"
+       "<drawsvg.drawing.Drawing at 0x2b0db941210>"
       ]
      },
      "metadata": {},
@@ -303,7 +303,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfc8890>"
+       "<drawsvg.drawing.Drawing at 0x2b0db930f10>"
       ]
      },
      "metadata": {},
@@ -408,7 +408,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfaa190>"
+       "<drawsvg.drawing.Drawing at 0x2b0db7097d0>"
       ]
      },
      "metadata": {},
@@ -517,7 +517,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfc9850>"
+       "<drawsvg.drawing.Drawing at 0x2b0db9128d0>"
       ]
      },
      "metadata": {},
@@ -685,7 +685,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfaa090>"
+       "<drawsvg.drawing.Drawing at 0x2b0db941650>"
       ]
      },
      "metadata": {},
@@ -759,7 +759,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfcb3d0>"
+       "<drawsvg.drawing.Drawing at 0x2b0db912b10>"
       ]
      },
      "metadata": {},
@@ -884,7 +884,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfb1210>"
+       "<drawsvg.drawing.Drawing at 0x2b0db905050>"
       ]
      },
      "metadata": {},
@@ -1045,7 +1045,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfa9690>"
+       "<drawsvg.drawing.Drawing at 0x2b0db7097d0>"
       ]
      },
      "metadata": {},
@@ -1208,7 +1208,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1cd4cfb05d0>"
+       "<drawsvg.drawing.Drawing at 0x2b0db9394d0>"
       ]
      },
      "metadata": {},
@@ -1221,6 +1221,189 @@
     "circuit.add(circuit2, 2)\n",
     "circuit.display()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unitaries\n",
+    "- Unitary transformations can also be implemented across a set of modes.\n",
+    "- These are defined with the Unitary object and can be added to the existing circuit.\n",
+    "- The included random_unitary function allows for a random transformation to be configured."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
+       "     width=\"1092.1538461538462\" height=\"310.0\" viewBox=\"0 0 2290 650\">\n",
+       "<defs>\n",
+       "</defs>\n",
+       "<rect x=\"100\" y=\"25\" width=\"2090\" height=\"600\" fill=\"none\" stroke=\"black\" />\n",
+       "<rect x=\"92\" y=\"124.5\" width=\"8\" height=\"1\" fill=\"black\" />\n",
+       "<rect x=\"92\" y=\"249.5\" width=\"8\" height=\"1\" fill=\"black\" />\n",
+       "<rect x=\"92\" y=\"374.5\" width=\"8\" height=\"1\" fill=\"black\" />\n",
+       "<rect x=\"92\" y=\"449.5\" width=\"8\" height=\"1\" fill=\"black\" />\n",
+       "<rect x=\"92\" y=\"524.5\" width=\"8\" height=\"1\" fill=\"black\" />\n",
+       "<text x=\"80\" y=\"127\" font-size=\"25\" fill=\"black\" text-anchor=\"end\" dominant-baseline=\"middle\" transform=\"rotate(0, 80, 127)\">0</text>\n",
+       "<text x=\"80\" y=\"252\" font-size=\"25\" fill=\"black\" text-anchor=\"end\" dominant-baseline=\"middle\" transform=\"rotate(0, 80, 252)\">1</text>\n",
+       "<text x=\"80\" y=\"377\" font-size=\"25\" fill=\"black\" text-anchor=\"end\" dominant-baseline=\"middle\" transform=\"rotate(0, 80, 377)\">2</text>\n",
+       "<text x=\"80\" y=\"452\" font-size=\"25\" fill=\"black\" text-anchor=\"end\" dominant-baseline=\"middle\" transform=\"rotate(0, 80, 452)\">-</text>\n",
+       "<text x=\"80\" y=\"527\" font-size=\"25\" fill=\"black\" text-anchor=\"end\" dominant-baseline=\"middle\" transform=\"rotate(0, 80, 527)\">3</text>\n",
+       "<rect x=\"149.95\" y=\"121.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"149.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"149.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"149.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"199.95\" y=\"121.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"199.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"250\" y=\"100.0\" width=\"50\" height=\"175\" fill=\"#3e368d\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"275.0\" y=\"187.5\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 275.0, 187.5)\">BS</text>\n",
+       "<text x=\"275.0\" y=\"300\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 275.0, 300)\">r = 0.5</text>\n",
+       "<rect x=\"299.95\" y=\"121.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"299.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"199.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"199.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"250\" y=\"350.0\" width=\"50\" height=\"200\" fill=\"#3e368d\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"275.0\" y=\"450.0\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 275.0, 450.0)\">BS</text>\n",
+       "<text x=\"275.0\" y=\"575\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 275.0, 575)\">r = 0.5</text>\n",
+       "<rect x=\"299.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"299.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"349.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"400\" y=\"225.0\" width=\"50\" height=\"50\" fill=\"#e8532b\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"425.0\" y=\"252\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 425.0, 252)\">PS</text>\n",
+       "<text x=\"425.0\" y=\"300\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 425.0, 300)\">φ = 1</text>\n",
+       "<rect x=\"449.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"349.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"400\" y=\"500.0\" width=\"50\" height=\"50\" fill=\"#e8532b\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"425.0\" y=\"527\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 425.0, 527)\">PS</text>\n",
+       "<text x=\"425.0\" y=\"575\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 425.0, 575)\">φ = π</text>\n",
+       "<rect x=\"449.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"349.95\" y=\"121.0\" width=\"150.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"349.95\" y=\"371.0\" width=\"150.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"499.95\" y=\"121.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"499.95\" y=\"246.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"499.95\" y=\"371.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"499.95\" y=\"521.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<path d=\"M529.3651081392092,121.0 L525,121.0 L525,129.0 L525,129.0 L650.6348918607908,379.0 L655,379.0 L655,371.0 L655,371.0 Z\" fill=\"black\" />\n",
+       "<path d=\"M528.426822512731,371.0 L525,371.0 L525,379.0 L525,379.0 L651.573177487269,529.0 L655,529.0 L655,521.0 L655,521.0 Z\" fill=\"black\" />\n",
+       "<path d=\"M525,521.0 L525,521.0 L525,529.0 L530.0262577108423,529.0 L655,129.0 L655,129.0 L655,121.0 L649.9737422891577,121.0 Z\" fill=\"black\" />\n",
+       "<path d=\"M525,246.0 L525,246.0 L525,254.0 L525.0,254.0 L655,254.0 L655,254.0 L655,246.0 L655.0,246.0 Z\" fill=\"black\" />\n",
+       "<rect x=\"654.95\" y=\"121.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"654.95\" y=\"246.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"654.95\" y=\"371.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"654.95\" y=\"521.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"679.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"679.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"730\" y=\"225.0\" width=\"50\" height=\"175\" fill=\"#3e368d\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"755.0\" y=\"312.5\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 755.0, 312.5)\">BS</text>\n",
+       "<text x=\"755.0\" y=\"425\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 755.0, 425)\">r = 0.5</text>\n",
+       "<rect x=\"779.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"779.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"679.95\" y=\"121.0\" width=\"150.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"829.95\" y=\"121.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"829.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"880\" y=\"100.0\" width=\"50\" height=\"175\" fill=\"#3e368d\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"905.0\" y=\"187.5\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 905.0, 187.5)\">BS</text>\n",
+       "<text x=\"905.0\" y=\"300\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 905.0, 300)\">r = 0.7</text>\n",
+       "<rect x=\"929.95\" y=\"121.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"929.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"679.95\" y=\"521.0\" width=\"150.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"829.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"829.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"880\" y=\"350.0\" width=\"50\" height=\"200\" fill=\"#3e368d\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"905.0\" y=\"450.0\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 905.0, 450.0)\">BS</text>\n",
+       "<text x=\"905.0\" y=\"575\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 905.0, 575)\">r = 0.7</text>\n",
+       "<rect x=\"929.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"929.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"979.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"979.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1030\" y=\"350.0\" width=\"50\" height=\"200\" fill=\"#3e368d\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"1055.0\" y=\"450.0\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1055.0, 450.0)\">BS</text>\n",
+       "<text x=\"1055.0\" y=\"575\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1055.0, 575)\">r = 0.5</text>\n",
+       "<rect x=\"1079.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1079.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1129.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1180\" y=\"350.0\" width=\"50\" height=\"50\" fill=\"#e8532b\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"1205.0\" y=\"377\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1205.0, 377)\">PS</text>\n",
+       "<text x=\"1205.0\" y=\"425\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1205.0, 425)\">φ = 0.6</text>\n",
+       "<rect x=\"1229.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1129.95\" y=\"521.0\" width=\"150.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1279.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1279.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1330\" y=\"350.0\" width=\"50\" height=\"200\" fill=\"#3e368d\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"1355.0\" y=\"450.0\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1355.0, 450.0)\">BS</text>\n",
+       "<text x=\"1355.0\" y=\"575\" font-size=\"18\" fill=\"black\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1355.0, 575)\">r = 0.5</text>\n",
+       "<rect x=\"1379.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1379.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"979.95\" y=\"246.0\" width=\"450.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1429.95\" y=\"246.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1429.95\" y=\"371.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1429.95\" y=\"521.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<path d=\"M1458.3965659037206,246.0 L1455,246.0 L1455,254.0 L1455,254.0 L1561.6034340962794,379.0 L1565,379.0 L1565,371.0 L1565,371.0 Z\" fill=\"black\" />\n",
+       "<path d=\"M1458.7521899671708,371.0 L1455,371.0 L1455,379.0 L1455,379.0 L1561.2478100328292,529.0 L1565,529.0 L1565,521.0 L1565,521.0 Z\" fill=\"black\" />\n",
+       "<path d=\"M1455,521.0 L1455,521.0 L1455,529.0 L1459.7611597987302,529.0 L1565,254.0 L1565,254.0 L1565,246.0 L1560.2388402012698,246.0 Z\" fill=\"black\" />\n",
+       "<rect x=\"1564.95\" y=\"246.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1564.95\" y=\"371.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1564.95\" y=\"521.0\" width=\"25.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1589.95\" y=\"371.0\" width=\"100.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1639.95\" y=\"446.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1589.95\" y=\"521.0\" width=\"100.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1690\" y=\"350.0\" width=\"100\" height=\"200\" fill=\"#1a0f36\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"1740.0\" y=\"450.0\" font-size=\"25\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(270, 1740.0, 450.0)\">Circuit</text>\n",
+       "<rect x=\"1789.95\" y=\"371.0\" width=\"100.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1789.95\" y=\"446.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1789.95\" y=\"521.0\" width=\"100.1\" height=\"8\" fill=\"black\" />\n",
+       "<circle cx=\"1640\" cy=\"450\" r=\"25\" fill=\"#3e368d\" stroke=\"black\" />\n",
+       "<text x=\"1640\" y=\"452.5\" font-size=\"30\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1640, 452.5)\">0</text>\n",
+       "<circle cx=\"1840\" cy=\"450\" r=\"25\" fill=\"#3e368d\" stroke=\"black\" />\n",
+       "<text x=\"1840\" y=\"452.5\" font-size=\"30\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1840, 452.5)\">0</text>\n",
+       "<rect x=\"1589.95\" y=\"246.0\" width=\"300.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1889.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1889.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1889.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"1940\" y=\"225.0\" width=\"100\" height=\"325\" fill=\"#1a0f36\" stroke=\"black\" rx=\"5\" ry=\"5\" />\n",
+       "<text x=\"1990.0\" y=\"387.5\" font-size=\"35\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 1990.0, 387.5)\">U</text>\n",
+       "<rect x=\"2039.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"2039.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"2039.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"979.95\" y=\"121.0\" width=\"1160.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"2089.95\" y=\"246.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"2089.95\" y=\"371.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<rect x=\"2089.95\" y=\"521.0\" width=\"50.1\" height=\"8\" fill=\"black\" />\n",
+       "<circle cx=\"150\" cy=\"375\" r=\"25\" fill=\"#3e368d\" stroke=\"black\" />\n",
+       "<text x=\"150\" y=\"377.5\" font-size=\"30\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 150, 377.5)\">0</text>\n",
+       "<circle cx=\"2140\" cy=\"125\" r=\"25\" fill=\"#3e368d\" stroke=\"black\" />\n",
+       "<text x=\"2140\" y=\"127.5\" font-size=\"30\" fill=\"white\" text-anchor=\"middle\" dominant-baseline=\"middle\" transform=\"rotate(0, 2140, 127.5)\">0</text>\n",
+       "</svg>"
+      ],
+      "text/plain": [
+       "<drawsvg.drawing.Drawing at 0x2b0db921890>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "U = lw.random_unitary(3)\n",
+    "unitary = lw.Unitary(U, label = \"U\")\n",
+    "\n",
+    "circuit.add(unitary, 1)\n",
+    "circuit.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
