Removed unused imports

--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -11,12 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lightworks as lw\n",
-    "from lightworks import emulator, State\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +80,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db941950>"
+       "<drawsvg.drawing.Drawing at 0x19a34c08290>"
       ]
      },
      "metadata": {},
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +172,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db941210>"
+       "<drawsvg.drawing.Drawing at 0x19a32c12fd0>"
       ]
      },
      "metadata": {},
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +302,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db930f10>"
+       "<drawsvg.drawing.Drawing at 0x19a34c17950>"
       ]
      },
      "metadata": {},
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +407,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db7097d0>"
+       "<drawsvg.drawing.Drawing at 0x19a34c17c10>"
       ]
      },
      "metadata": {},
@@ -433,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +516,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db9128d0>"
+       "<drawsvg.drawing.Drawing at 0x19a34c16ed0>"
       ]
      },
      "metadata": {},
@@ -540,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +684,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db941650>"
+       "<drawsvg.drawing.Drawing at 0x19a34c15a90>"
       ]
      },
      "metadata": {},
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +758,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db912b10>"
+       "<drawsvg.drawing.Drawing at 0x19a34c1bc10>"
       ]
      },
      "metadata": {},
@@ -884,7 +883,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db905050>"
+       "<drawsvg.drawing.Drawing at 0x19a34c1ba10>"
       ]
      },
      "metadata": {},
@@ -919,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1044,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db7097d0>"
+       "<drawsvg.drawing.Drawing at 0x19a34c18710>"
       ]
      },
      "metadata": {},
@@ -1068,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1207,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db9394d0>"
+       "<drawsvg.drawing.Drawing at 0x19a34c339d0>"
       ]
      },
      "metadata": {},
@@ -1226,7 +1225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unitaries\n",
+    "## Unitary Matrices\n",
     "- Unitary transformations can also be implemented across a set of modes.\n",
     "- These are defined with the Unitary object and can be added to the existing circuit.\n",
     "- The included random_unitary function allows for a random transformation to be configured."
@@ -1234,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1382,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2b0db921890>"
+       "<drawsvg.drawing.Drawing at 0x19a3493f090>"
       ]
      },
      "metadata": {},
