Removed bullet points in circuit building

--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# Circuit Building\n",
-    "- This tutorial demonstrates how circuits can be built up from the set of fundamental components included within Lightworks."
+    "\n",
+    "This tutorial demonstrates how circuits can be built up from the set of fundamental components included within Lightworks."
    ]
   },
   {
@@ -26,7 +27,8 @@
    "metadata": {},
    "source": [
     "## Basic circuit\n",
-    "- Start with a basic circuit, consisting only of beam splitters and phase shifters."
+    "\n",
+    "Start with a basic circuit, consisting only of beam splitters and phase shifters."
    ]
   },
   {
@@ -106,7 +108,8 @@
    "metadata": {},
    "source": [
     "## Mode swaps\n",
-    "- It is also possible to use the mode swap component to quickly switch modes."
+    "\n",
+    "It is also possible to use the mode swap component to quickly switch modes."
    ]
   },
   {
@@ -192,7 +195,8 @@
    "metadata": {},
    "source": [
     "## Loss\n",
-    "- When simulating, loss can be introduced to each of the circuit modes, either alongside components or directly."
+    "\n",
+    "When simulating, loss can be introduced to each of the circuit modes, either alongside components or directly."
    ]
   },
   {
@@ -212,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The display_loss option is required for these to be shown."
+    "The display_loss option is required for these to be shown."
    ]
   },
   {
@@ -318,7 +322,8 @@
    "metadata": {},
    "source": [
     "## Parameterization\n",
-    "- Circuits can be parameterized using the included Parameter objects."
+    "\n",
+    "Circuits can be parameterized using the included Parameter objects."
    ]
   },
   {
@@ -427,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- This can be updated with the set method to alter the circuit without having to redefine it."
+    "This can be updated with the set method to alter the circuit without having to redefine it."
    ]
   },
   {
@@ -534,7 +539,8 @@
    "metadata": {},
    "source": [
     "## Adding circuits\n",
-    "- It is also possible to combine circuits using either + or add. The former requires both circuits be the same size, whereas the latter does not."
+    "\n",
+    "It is also possible to combine circuits using either + or add. The former requires both circuits be the same size, whereas the latter does not."
    ]
   },
   {
@@ -913,7 +919,7 @@
    "metadata": {},
    "source": [
     "## Heralds\n",
-    "- Heralds can also be included as part of the circuit, which means that these modes do not need to be specifed in the simulation objects."
+    "Heralds can also be included as part of the circuit, which means that these modes do not need to be specifed in the simulation objects."
    ]
   },
   {
@@ -1061,8 +1067,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- It is also possible to add heralds to sub-circuits and then include these within a larger circuit. \n",
-    "- Note: heralds on the smaller circuit, will be added to new dedicated modes in the larger circuit and cannot be interacted with in any way. This can be seen from the display of the created circuit below."
+    "It is also possible to add heralds to sub-circuits and then include these within a larger circuit. \n",
+    "\n",
+    "Note: heralds on the smaller circuit, will be added to new dedicated modes in the larger circuit and cannot be interacted with in any way. This can be seen from the display of the created circuit below."
    ]
   },
   {
@@ -1226,9 +1233,9 @@
    "metadata": {},
    "source": [
     "## Unitary Matrices\n",
-    "- Unitary transformations can also be implemented across a set of modes.\n",
-    "- These are defined with the Unitary object and can be added to the existing circuit.\n",
-    "- The included random_unitary function allows for a random transformation to be configured."
+    "Unitary transformations can also be implemented across a set of modes.\n",
+    "These are defined with the Unitary object and can be added to the existing circuit.\n",
+    "The included random_unitary function allows for a random transformation to be configured."
    ]
   },
   {
